# Berkan-s-repo

./: ConsoleApplication1.sln
girilensayiyakadarlarintoplami/: girilensayiyakadarlarintoplami.sln
girilensayiyakadarlarintoplami/girilensayiyakadarlarintoplami/: girilensayiyakadarlarintoplami.cpp
homework/: homework.sln
homework/homework/: dictionary.txt  func.h  homework.cpp  homework.vcxproj  homework.vcxproj.filters  library.h
repos/CMakeProject1/: CMakeLists.txt
repos/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
repos/CMakeProject2/: CMakeLists.txt
repos/CMakeProject2/CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h
repos/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
repos/ConsoleApplication6/: ConsoleApplication6.sln
repos/ConsoleApplication6/ConsoleApplication6/: ConsoleApplication6.cpp  ConsoleApplication6.vcxproj  ConsoleApplication6.vcxproj.filters
repos/ConsoleApplication8/: ConsoleApplication8.sln
repos/ConsoleApplication8/ConsoleApplication8/: ConsoleApplication8.cpp  ConsoleApplication8.vcxproj
repos/asal sayilar/: asal sayilar.sln
repos/asal sayilar/asal sayilar/: asal sayilar.cpp  asal sayilar.vcxproj  asal sayilar.vcxproj.filters
repos/carpim tablosu/: carpim tablosu.sln
repos/carpim tablosu/carpim tablosu/: carpim tablosu.cpp  carpim tablosu.vcxproj  carpim tablosu.vcxproj.filters
repos/girilensayiyakadarlarintoplami/: girilensayiyakadarlarintoplami.sln
repos/lecture8/: lecture8.sln
(+116 files in other folders)
